content/_sass/partials/_nav.scss
.top-nav,
.navbar-brand,
.nav-logo {
  height: $nav-height-mobile;
}

@include media-breakpoint-up(lg) {
  .top-nav {
    height: auto;
  }

  .navbar-brand,
  .nav-logo {
    height: $nav-height-desktop;
  }
}

.nav-wrap,
.top-nav,
.nav-item {
  background-color: $nav--bg-color;
}

@include media-breakpoint-up(xl) {
  .top-nav {
    height: $nav-height-desktop;
  }
}

.top-nav {
  border-bottom: 2px solid $nav--border-color;
  box-sizing: content-box;
}

.nav-wrap {
  background: $nav--bg-color;
  border: 0;
  margin: 0 0 0 auto;
  padding: 0;
  width: auto;
}

.navbar-brand {
  box-sizing: content-box;
  left: 0;
  position: absolute;
  top: 0;
}

@include media-breakpoint-up(lg) {
  .navbar-brand {
    position: absolute;
    top: 6px;
  }
}

@media (min-width: 1170px) {
  .navbar-brand {
    top: 0;
  }
}

.nav-logo {
  margin: 3px 0 3px 6px;
  object-fit: contain;
}

@include media-breakpoint-up(lg) {
  .nav-wrap {
    border: 0;
  }

  .navbar-brand {
    height: $nav--brand-height-desktop;
    padding: 0;
  }

  .nav-logo {
    height: $nav--logo-height-desktop;
    margin: $nav--logo-margin-desktop;
  }
}

.navbar-toggler {
  margin: 5px 1rem 5px 0;
}

.navbar-collapse {
  background: transparent;
  border-bottom: 1px solid $nav--border-color-2;
}

@include media-breakpoint-up(lg) {
  .navbar-collapse {
    border: 0;
  }
}

.nav-item {
  padding: $nav--item-padding;
}

@include media-breakpoint-up(lg) {
  .nav-item {
    padding: 0 0.3rem;
  }
}

@include media-breakpoint-up(lg-2) {
  .nav-item {
    padding: 0 0.25rem;
  }
}

@include media-breakpoint-up(xl-13) {
  .nav-item {
    padding: 0 0.5rem;
  }
}

.top-nav .navbar-nav {
  .nav-link {
    &:hover,
    &:focus,
    &:active {
      color: $cwl-red;
    }

    &.is-current-page {
      color: $cwl-red;
      font-weight: 500;
    }
  }
}

@include media-breakpoint-up(lg) {
  .navbar-nav {
    max-width: calc(100vw - 130px);
  }
}

@include media-breakpoint-up(xl) {
  .navbar-nav {
    margin: 0 1rem;
    max-width: 100%;
  }

  // Account for lack of scrollbar on short pages
  .page-short .navbar-nav {
    margin: 0 2rem 0 1rem;
  }
}

// Fix for menu items inaccessible on landscape mode
@media (max-height: 525px) and (max-width: 992px) {
  .navbar-nav {
    background-color: #f4f4f4;
    /* fits exactly 10 menu items in 2 cols, starting at 206px
    Once it's above 238px, it overflows on Nexus 5 (640x360 in dev tools)  */
    margin-left: 0 !important;
    max-height: 238px;
    width: 260px;
  }
}

.nav--paypal-btn {
  padding: 0.25rem 1.25rem 0.25rem 0.75rem;
}

@include media-breakpoint-up(lg) {
  .nav--paypal-btn {
    padding: 0;

    input.paypal-btn {
      height: 30px;
      margin: 6px 0 0;
      width: 103px;
    }
  }
}

.nav-social-icons {
  margin: 0;
  padding: $nav--item-padding 0.25rem;

  .fab {
    font-size: 2em;
    margin: $nav--item-margin;
  }

  .first-icon {
    margin-left: 0;
  }
}

@include media-breakpoint-up(lg) {
  .nav-social-icons {
    margin: 8px 0 0;
    padding: 0 1rem;

    .fab {
      font-size: 1.75rem;
      margin: 0 $nav--item-margin;
    }
  }
}

@include media-breakpoint-up(lg-2) {
  .nav-social-icons {
    padding: 0 0.5rem;
  }
}

.fa-twitter {
  color: $twitter-blue;
}

.fa-github {
  color: $black;
}

.skip-nav {
  margin: 0;

  li {
    height: 0;
    list-style: none;
    width: 0;
  }

  .skip-link {
    background: white;
    left: 0;
    overflow: hidden;
    position: absolute;
    top: -40px;
    transition: top 1s ease-out, background 1s linear;
      -webkit-transition: top 1s ease-out, background 1s linear;

    &:focus {
      color: $cwl-red;
      box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
      font-weight: 700;
      height: auto;
      left: 0;
      padding: 15px 23px 14px;
      position: absolute;
      top: 0;
      transition: top .1s ease-in, background .5s linear;
        -webkit-transition: top .1s ease-in, background .5s linear;
      z-index: 2000;
    }
  }
}

